tests/baselines/reference/moduleAugmentationsBundledOutput1(strict=true).errors.txt
m3.ts(1,19): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
m3.ts(2,19): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
test.ts(5,1): error TS2454: Variable 'c' is used before being assigned.
test.ts(6,1): error TS2454: Variable 'c' is used before being assigned.
test.ts(7,1): error TS2454: Variable 'c' is used before being assigned.
test.ts(8,1): error TS2454: Variable 'c' is used before being assigned.


==== m1.ts (0 errors) ====
    export class Cls {
    }
    
==== m2.ts (0 errors) ====
    import {Cls} from "./m1";
    (<any>Cls.prototype).foo = function() { return 1; };
    (<any>Cls.prototype).bar = function() { return "1"; };
    
    declare module "./m1" {
        interface Cls {
            foo(): number;
        }
    }
    
    declare module "./m1" {
        interface Cls {
            bar(): string;
        }
    }
    
==== m3.ts (2 errors) ====
    export class C1 { x: number }
                      ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    export class C2 { x: string }
                      ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    
==== m4.ts (0 errors) ====
    import {Cls} from "./m1";
    import {C1, C2} from "./m3";
    (<any>Cls.prototype).baz1 = function() { return undefined };
    (<any>Cls.prototype).baz2 = function() { return undefined };
    
    declare module "./m1" {
        interface Cls {
            baz1(): C1;
        }
    }
    
    declare module "./m1" {
        interface Cls {
            baz2(): C2;
        }
    }
    
==== test.ts (4 errors) ====
    import { Cls } from "./m1";
    import "m2";
    import "m4";
    let c: Cls;
    c.foo().toExponential();
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.bar().toLowerCase();
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.baz1().x.toExponential();
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.baz2().x.toLowerCase();
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    